# rustTemplate

./: Cargo.toml  README.md
src/: main.rs
src/dto/: jwt_encode.rs  login_users.rs  mod.rs  registerNewUser.rs
src/entitys/: mod.rs  newUserEntity.rs
src/models/: jwt_claims.rs  login_user_model.rs  mod.rs  registerNewUser.rs
src/postgres/: db.rs
